# wowcode

./: .gitignore  README.md  pyproject.toml
wowcode/: __main__.py  agent.py  app.py  client.py  config.py  conversation.py  permission_dialog.py  plan_dialog.py  prompts.py  remote.py  serialization.py  session_dialog.py  teammate_tree.py  validator.py  web_content.py
wowcode/agents/: __init__.py  fork.py  loader.py  notification.py  parser.py  task_manager.py  tool_filter.py
wowcode/commands/: __init__.py  loader.py  parser.py
wowcode/context/: __init__.py  manager.py
wowcode/filehistory/: __init__.py  history.py
wowcode/hooks/: __init__.py  conditions.py  engine.py  events.py  executors.py  loader.py  models.py
wowcode/mcp/: __init__.py  client.py  manager.py  tool_wrapper.py
wowcode/memory/: __init__.py  auto_memory.py  instructions.py  recall.py  session.py
wowcode/permissions/: __init__.py  checker.py  dangerous.py  modes.py  sandbox.py
wowcode/sandbox/: __init__.py  bwrap.py  seatbelt.py
wowcode/skills/: __init__.py  directory.py  executor.py  loader.py  parser.py
wowcode/teams/: __init__.py  backend_detect.py  coordinator.py  mailbox.py  manager.py  models.py  spawn_inprocess.py  spawn_iterm2.py  spawn_tmux.py  transcript.py
wowcode/tools/: __init__.py  agent_tool.py  ask_user.py  bash.py  edit_file.py  enter_worktree.py  exit_plan_mode.py  exit_worktree.py  file_state_cache.py  glob.py  grep.py  load_skill.py  read_file.py  send_message.py  synthetic_output.py  task_create.py  task_get.py  task_list.py  task_update.py  team_create.py  (+2 more)
(+29 files in other folders)
